Add CPU-only benchmarks