@@ -167,7 +167,8 @@ public class NonVectorisedSimd extends ResultConsumptionTarget {
             "--add-opens=java.base/java.nio=ALL-UNNAMED",
             "-Darrow.enable_unsafe_memory_access=true",
             "-Darrow.enable_null_check_for_get=false",
-            "--enable-preview"
+            "--enable-preview",
+            "--enable-native-access=ALL-UNNAMED"
     })
     public void executeQuery() throws IOException {
         this.generatedQuery.execute();
